--- a/frontend/src/app/components/users/users.component.html
+++ b/frontend/src/app/components/users/users.component.html
@@ -1,21 +1,21 @@
 <div class="container">
     <div class="row">
       <div class="col-12 pt-4">
-        <table class="m-auto table">
+        <table class="m-auto table table-borderless">
           <tr class="text-left">
-            <th class="p-0">Firstname</th>
-            <th class="p-0">Lastname</th>
-            <th class="p-0">Email</th>
-            <th class="p-0">
+            <th class="py-0">Firstname</th>
+            <th class="py-0">Lastname</th>
+            <th class="py-0">Email</th>
+            <th class="py-0">
               <Button (click)="openUserModal('Add')">Add New Row</Button>
             </th>
             <hr>
           </tr>
           <tr *ngFor="let user of rows" [ngClass]="user.color">
-            <td class="p-0">{{user.firstName}}</td>
-            <td class="p-0">{{user.lastName}}</td>
-            <td class="p-0">{{user.email}}</td>
-            <td class="p-0 pr-0 float-right">
+            <td class="py-1">{{user.firstName}}</td>
+            <td class="py-1">{{user.lastName}}</td>
+            <td class="py-1">{{user.email}}</td>
+            <td class="py-1 pr-0 float-right">
               <button (click)="openUserModal('Update', user)"><i class="fas fa-pencil-alt"></i></button>
               <button (click)="deleteUser(confirmDelete, user._id)"><i class="fas fa-trash-alt"></i></button>
             </td>
